...
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View Details →"
                android:textColor="#89F336"
                android:textSize="12sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
...
