appId: com.example.spareseat
---
- launchApp:
    clearState: true
- tapOn: "Get Started"
- tapOn:
    id: "tilEmail"
- inputText: "bigydot@gmail.com"
- hideKeyboard
- tapOn:
    id: "tilPassword"
- inputText: "123456aA"
- hideKeyboard
- tapOn: "Sign In"
- extendedWaitUntil:
    visible: "Hi, Big Dot!"
    timeout: 15000
